[package]
name = "librocksdb-sys"
version = "6.20.3"
edition = "2018"
authors = ["Karl Hobley <karlhobley10@gmail.com>", "Arkadiy Paronyan <arkadiy@ethcore.io>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/rust-rocksdb/rust-rocksdb"
keywords = [ "bindings", "ffi", "rocksdb" ]
categories = [ "api-bindings", "database", "external-ffi-bindings" ]
links = "rocksdb"

[features]
default = []
jemalloc = ["tikv-jemalloc-sys"]
rtti = []
sse = []

[dependencies]
libc = "0.2"
tikv-jemalloc-sys = { version = "0.4", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
bzip2-sys = { version = "0.1.11+1.0.8", features = ["static"] }
zstd-sys = "1.4.19+zstd.1.4.8"
libz-sys = { version = "1.1", features = ["static"] }

lz4-sys = "1.9"

[dev-dependencies]
const-cstr = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
cc = { version = "1.0.3" }
cmake = "0.1"
bindgen = { version = "0.59", default-features = false, features = ["runtime"] }
glob = "0.3"

[dependencies.snappy-sys]
git = "https://github.com/busyjay/rust-snappy.git"
branch = "static-link"
